src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/UnexpectedTranslationKey1/InvalidUnexpectedTranslationKey1.php
<?php

namespace Invalid\UnexpectedTranslationKey1;

use Claroline\CoreBundle\AbstractType\ClarolineExtension;

class InvalidUnexpectedTranslationKey1 extends ClarolineExtension
{
    public function getNameTranslationKey()
    {
        return array();
    }
}